# notorm

./: .env_dev  .env_test  .gitignore  .pre-commit-config.yaml  AI_ENHANCED_FEATURES_IMPLEMENTATION_PLAN.md  AI_ENHANCED_FEATURES_IMPLEMENTATION_STATUS.md  API_DOCUMENTATION_PLAN.md  API_ENDPOINT_ISSUES.md  APPLICATION_SERVICES_TESTS_FIXES.md  BACKWARD_COMPATIBILITY_TRANSITION_PLAN.md  BACKWARD_COMPATIBILITY_TRANSITION_SUMMARY.md  BENCHMARK_EXPANSION_PLAN.md  BENCHMARK_IMPLEMENTATION_STATUS.md  BENCHMARK_PROGRESS_SUMMARY.md  CASCADE_CODE_REVIEW.md  CLAUDE.md  CLEANUP_VALIDATION_FRAMEWORK.md  CODE.md  CODEBASE_AUDIT.md  CODEX_REFACTOR_PROPOSAL.md  CODEX_REFACTOR_REVIEW.md  CODE_REVIEW_04_18.md  CODE_STANDARDIZATION_PROGRESS.md  CONNECTION_POOLING_OPTIMIZATION_PLAN.md  DATABASE_CODE_CLEANUP.md  DATABASE_PROVIDER_IMPLEMENTATION.md  DDD_APPLICATION_DEVELOPMENT.md  DDD_CODE_CLEANUP_PLAN.md  DEVELOPER_GUIDE.md  DEVELOPER_TOOLING_IMPLEMENTATION_PLAN.md  DEVELOPER_TOOLING_IMPLEMENTATION_STATUS.md  DI_BYPASS.md  DI_IMPLEMENTATION_04_18_1.md  DI_ISSUES.md  DOCUMENTATION_REFACTORING.md  DOCUMENTATION_STANDARDIZATION_PLAN.md  DOMAIN_ISSUES.md  DOMAIN_NEXT.md  DOMAIN_TODO.md  DeepSeekR1_FINDINGS.md  (+65 more)
.github/workflows/: architecture-tests.yml  lint-di-bypass.yml
.qodo/: history.sqlite
PROPOSALS/: AI_ENHANCED_FEATURES_IMPLEMENTATION_PLAN.md  AI_ENHANCED_FEATURES_IMPLEMENTATION_STATUS.md  API_ENDPOINT_INTEGRATION_IMPLEMENTATION.md  ASYNC_PATTERN_MODERNIZATION.md  BACKWARD_COMPATIBILITY_TRANSITION_PLAN.md  BACKWARD_COMPATIBILITY_TRANSITION_SUMMARY.md  BENCHMARK_EXPANSION_PLAN.md  BENCHMARK_PROGRESS_SUMMARY.md  CODE_CLEANUP_PLAN.md  CODE_STANDARDIZATION_PROGRESS.md  CONNECTION_POOLING_OPTIMIZATION_PLAN.md  CQRS_READ_MODEL_IMPLEMENTATION_PLAN.md  DATABASE_ERROR_HANDLING_SUMMARY.md  DATABASE_HEALTH_MONITORING_IMPLEMENTATION.md  DEVELOPER_TOOLING_IMPLEMENTATION_PLAN.md  DEVELOPER_TOOLING_IMPLEMENTATION_STATUS.md  DEVELOPER_TOOLING_IMPROVEMENT_PLAN.md  DI_COMPLETE_SUMMARY.md  DI_DEPENDENCY_GRAPH.md  DI_FEATURE_PARITY.md  DI_FILE_REMOVAL_PLAN.md  DI_IMPLEMENTATION_SUMMARY.md  DI_MIGRATION_GUIDE.md  DI_TRANSITION_PLAN.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_CONTRIBUTOR_GUIDE.md  DOCUMENTATION_DEVELOPMENT_PLAN.md  DOCUMENTATION_GENERATION_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REMAINING_ISSUES.md  DOCUMENTATION_STATUS_VISUALIZATION.md  DOCUMENTATION_UPDATE_PROCESS.md  DOMAIN_DRIVEN_DESIGN_IMPLEMENTATION.md  DOMAIN_FILES_ANALYSIS.md  DOMAIN_MODEL_IMPLEMENTATION_SUMMARY.md  DOMAIN_MODEL_STANDARDIZATION.md  ENDPOINT_MIGRATION_TRACKING.md  FEATURE_FACTORY_PLAN.md  FUTURE_ENHANCEMENT_PROPOSALS.md  GRAPH_DATABASE_IMPLEMENTATION_STATUS.md  (+29 more)
PROPOSALS/workflows/: QUERY_UI_PROPOSAL.md
benchmarks/core/: bench_distributed_uow.py  bench_postgres_event_store.py  benchmark_runner.py
benchmarks/dashboard/: Dockerfile  README.md  app.py  config.json  dashboard.py  docker-compose.yml  process_results.py  requirements.txt  run_dashboard.sh  setup_dashboard.sh  test_install.py
contexts_template/api/: README.md  __init__.py
contexts_template/application/: README.md  __init__.py
contexts_template/domain/: README.md  __init__.py
contexts_template/infrastructure/: README.md  __init__.py
devtools/cli/: codegen.py  debug.py  migrations.py  profile.py  scaffold.py
devtools/codegen/: api.py  crud.py  formatter.py  model.py  project.py  repository.py  service.py
devtools/debugging/: __init__.py  error_enhancer.py  middleware.py  repository_debug.py  setup.py  sql_debug.py  tracer.py
devtools/docs/: __init__.py  diagram.py  extractor.py  extractors.py  generator.py  renderers.py  server.py
devtools/migrations/: __init__.py
devtools/modeler/: analyzer.py  generator.py  models.py  server.py
devtools/profiler/: __init__.py
devtools/profiling/: hotspot.py  memory.py  middleware.py  profiler.py  visualization.py
docker/: Dockerfile  INSTALL_PGVECTOR.md  README.md  docker-compose.yaml
docker/scripts/: setup_test_docker.sh  setup_with_docker.sh
docs/: DEPENDENCY_MODULE.md  DEVELOPER_GUIDE.md  DOCKER_FIRST.md  DOCUMENTATION_REMAINING_ISSUES.md  DOCUMENTATION_STATUS_VISUALIZATION.md  DOCUMENTATION_UPDATE_PROCESS.md  PROTOCOL_TESTING_FRAMEWORK.md  UNIT_OF_WORK_IMPLEMENTATION.md  UNOSERVICEPROVIDER_INTEGRATION.md  about.md  architecture.md  commands.md  developer_docs_guide.md  developer_tools.md  docker_setup.md  example_usage_sql.py  faq.md  filter-manager.md  getting_started.md  index.md  integration_summary.md  license.md  migration_guide_sql.md  migration_readme_sqlconfiginstances.md  migration_steps_emitters.md  mkdocs.yml  pgvector_installation.md  protocol_validation.md  roadmap.md  simplified_example_sql.txt  structure.md  testing.md  uno-db-guide.md  uno-model-guide.md  uno-obj-guide.md  uno-overview-guide.md  uno-registry-guide.md  uno-schema-manager-guide.md
docs/admin/: overview.md
docs/api/: ai.md  attributes.md  authorization.md  caching.md  cqrs_read_model_integration.md  deployment.md  devtools.md  domain-endpoints.md  domain-integration.md  domain-service-integration.md  dto-manager.md  dto.md  endpoint-factory.md  endpoint.md  jobs.md  messaging.md  meta.md  module_index.md  overview.md  queries.md  read_model.md  realtime.md  reports.md  (+11 more)
examples/: attributes_values_api_example.py  authentication_authorization.py  content_generation_example.py  cqrs_performance_monitoring_example.py  custom_endpoint_behaviors.py  database_interaction_approaches.py  example_app.py  hateoas_links.py  main-py.py  middleware_examples.py  modern_async_patterns.py  specification_example.py
legacy_backup/: vector_events.py
migrations/: update_insert_permissions_function.sql
reports/: import_fix_guide.md  import_validation_report.md
scripts/: README.md  convert_tests_to_pytest.sh  fix_broken_links.py  fix_cross_references.py  generate_placeholders.py  install_pgvector.sh  launch_modeler.sh  rebuild_docker.sh  setup-test.sh  setup_docker.sh  setup_test_env.sh
tests/: README.md  TEST_STANDARDIZATION_PLAN.md  conftest.py  pytest.ini  test_create_context_cli.py  test_error_handling.py
(+2514 files in other folders)
