# SPDX-FileCopyrightText: 2024-present Richard Dahl <richard@dahl.us>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Basic Project Information
[project]
name = "uno"
dynamic = ["version"]
description = 'uno is not an orm'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [{ name = "Richard Dahl", email = "richard@dahl.us" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "alembic>=1.13.1",
  "babel>=2.14.0",
  "fastapi[standard]>=0.109.0",
  "jinja2>=3.1.3",
  "PyJWT>=2.8.0",
  "psycopg[binary]>=3.1.18",
  "asyncpg>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "python-multipart>=0.0.6",
  "psutil>=5.9.7",
  "pytz>=2023.3.post1",
  "uvicorn[standard]>=0.25.0",
  "sqlalchemy[asyncio]>=2.0.25",
  "aiohttp>=3.9.1",
  "croniter>=2.0.1",
  "structlog>=24.1.0",           # Structured logging
  "rich>=13.6.0",                # Rich terminal output
  "httpx>=0.25.2",               # Modern HTTP client
  "redis>=5.0.1",                # Redis client for caching
  "msgspec>=0.18.4",             # Fast serialization
  "tenacity>=8.2.3",             # Retrying library
  "cachetools>=5.3.2",           # Caching utilities
  "ruff",
]

[project.urls]
Documentation = "https://github.com/richarddahl/notorm#readme"
Issues = "https://github.com/richarddahl/notorm/issues"
Source = "https://github.com/richarddahl/notorm"

[project.scripts]
ddd-lib = "src.scripts.ddd_lib:main"

[tool.hatch.version]
path = "src/uno/__about__.py"


# Default Environment
[tool.hatch.envs.default.scripts]
main = "uvicorn main:app {args: --reload}"
createdb = "python src/scripts/createdb.py"
dropdb = "python src/scripts/dropdb.py"
createsuperuser = "python src/scripts/createsuperuser.py"
createquerypaths = "python src/scripts/createquerypaths.py"
vector-demo = "python src/scripts/vector_demo.py {args}"
migrate-init = "python src/scripts/migrations.py init"
migrate-generate = "python src/scripts/migrations.py generate {args}"
migrate-up = "python src/scripts/migrations.py upgrade {args:head}"
migrate-down = "python src/scripts/migrations.py downgrade {args}"
migrate-current = "python src/scripts/migrations.py current"
migrate-history = "python src/scripts/migrations.py history"
migrate-revisions = "python src/scripts/migrations.py revisions"


#Development Environment
[tool.hatch.envs.dev.scripts]
main = "ENV=dev uvicorn main:app {args: --reload}"
createdb = "ENV=dev python src/scripts/createdb.py"
dropdb = "ENV=dev python src/scripts/dropdb.py"
createsuperuser = "ENV=dev python src/scripts/createsuperuser.py"
createquerypaths = "ENV=dev python src/scripts/createquerypaths.py"
vector-demo = "ENV=dev python src/scripts/vector_demo.py {args}"
migrate-init = "ENV=dev python src/scripts/migrations.py init"
migrate-generate = "ENV=dev python src/scripts/migrations.py generate {args}"
migrate-up = "ENV=dev python src/scripts/migrations.py upgrade {args:head}"
migrate-down = "ENV=dev python src/scripts/migrations.py downgrade {args}"
migrate-current = "ENV=dev python src/scripts/migrations.py current"
migrate-history = "ENV=dev python src/scripts/migrations.py history"
migrate-revisions = "ENV=dev python src/scripts/migrations.py revisions"
pg-extensions = "python -m src.scripts.postgres_extensions {args}"
docker-setup = "python -m src.scripts.setup_environment --env dev"
docker-rebuild = "python -m src.scripts.docker_rebuild --env dev"
app = ["ENV=dev", "docker-setup", "main"]
vector-demo-setup = ["ENV=dev", "docker-setup", "vector-demo setup"]


# Testing Environment
[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-asyncio>=0.21.1",
  "pytest-benchmark>=4.0.0",
  "asyncio",
  "httpx",
  "requests",
  "factory_boy",
  "pytest-mock",
  "hypothesis",
]

[tool.coverage.run]
source_pkgs = ["uno", "tests"]
branch = true
parallel = true
omit = ["src/uno/__about__.py"]

[tool.coverage.paths]
uno = ["src/uno", "*/uno/src/uno"]
tests = ["tests", "*/uno/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.envs.test.scripts]
test = "ENV=test pytest --tb=no --capture=tee-sys --show-capture=all"
testv = "ENV=test pytest --tb=short --capture=tee-sys --show-capture=all"
testvv = "ENV=test pytest -vv --capture=tee-sys --show-capture=all"
testV = "ENV=test pytest --capture=tee-sys --show-capture=all"
test-cov = "ENV=test coverage run -m pytest"
cov-report = ["ENV=test", "- coverage combine", "coverage report"]
cov = ["ENV=test", "test-cov", "cov-report"]
benchmark = "ENV=test pytest tests/benchmarks/ {args}"
pg-extensions = "python -m src.scripts.postgres_extensions {args}"
createdb = "ENV=test python src/scripts/createdb.py"
dropdb = "ENV=test python src/scripts/dropdb.py"
migrate-init = "ENV=test python src/scripts/migrations.py init"
migrate-generate = "ENV=test python src/scripts/migrations.py generate {args}"
migrate-up = "ENV=test python src/scripts/migrations.py upgrade {args:head}"
migrate-down = "ENV=test python src/scripts/migrations.py downgrade {args}"
migrate-current = "ENV=test python src/scripts/migrations.py current"
migrate-history = "ENV=test python src/scripts/migrations.py history"
migrate-revisions = "ENV=test python src/scripts/migrations.py revisions"
docker-setup = "python -m src.scripts.setup_environment --env test"
docker-rebuild = "python -m src.scripts.docker_rebuild --env test"
all = ["ENV=test", "docker-setup", "test"]

[tool.pytest.ini_options]
markers = [
  "asyncio: mark a test as an asyncio test (using pytest-asyncio)",
  "benchmark: mark test as a performance benchmark",
  "pgvector: mark test as requiring pgvector extension",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]


# Documentation Environement
[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings>=0.15.0",
  "mkdocs-autorefs",
  "mkdocs-material-extensions",
  "mkdocstrings-python",
  "mkdocs-git-revision-date-localized-plugin",
]


[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8001"


# Types Environment
[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.8.0", "ruff"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/uno tests}"
lint = "ruff check {args:src/uno tests}"
format = "ruff format {args:src/uno tests}"
all = ["check", "lint", "format"]

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_unused_configs = true
exclude = ["migrations"]

[tool.ruff]
# Target Python version
target-version = "py312"

# Line length
line-length = 88

# Enable Pyflakes (F), isort (I), pycodestyle (E) and more
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # naming
  "UP",  # pyupgrade (modernize syntax)
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "TCH", # typecheck
  "RUF", # Ruff-specific rules
  "ERA", # eradicate
  "PL",  # pylint
]

# Ignore specific rules
ignore = [
  "E501", # Line too long (handled by formatter)
]

# Exclude files and directories
exclude = [
  ".git",
  ".ruff_cache",
  ".mypy_cache",
  ".pytest_cache",
  "__pycache__",
  "migrations",
  "alembic",
]

[tool.ruff.per-file-ignores]
# Ignore specific rules for test files and conftest
"tests/**/*.py" = [
  "E501", # Line too long
  "S101", # Use of assert
]

[tool.ruff.isort]
known-first-party = ["uno"]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
